--- a/latex/WPiG.tex
+++ b/latex/WPiG.tex
@@ -1,6 +1,6 @@
 % !TEX encoding = UTF-8 Unicode
 
-\documentclass[12pt]{amsart}
+\documentclass[12pt]{amsbook}
 
 \usepackage{agda}
 
@@ -29,17 +29,54 @@
 \input{glossary}
 \renewcommand*{\glstextformat}[1]{\textsl{#1}}
 
+
 \usepackage{todonotes}
 
 \title{Word Processing in Groups}
 \author{Eric Bailey}
 % \date{}
 
+\usepackage{outlines}
 
 \begin{document}
 
 \maketitle
 \tableofcontents
+
+\newpage
+\part{An Introduction to Automatic Groups}
+
+\chapter{Finite State Automata, Regular Languages and Predicate Calculus}
+
+\section{Languages and Regular Languages}
+
+\begin{outline}
+  \1 An \gls{alphabet} $A$ is \glossentrydesc{alphabet}.
+  \2 If $A$ is the \gls{alphabet} over lowercase letters, ``automaton'' is a
+  \gls{string} over $A$ with $n = 9$.
+  \2 If $\omega$ is a \gls{string} $\{1,...,n\} \to A$, we call $n$ the
+  \gls{length} of $\omega$ and we denote it by $|\omega|$.
+  \1 An element of a $A$ is called a \gls{letter}.
+  \1 A \gls{string} over the \gls{alphabet} $A$ is \glossentrydesc{string}.
+  \1 If $n = 0$, the domain is the nullset and there is a unique string, the
+    \gls{nullstring}, generally denoted \glsentrysymbol{nullstring}, or
+    sometimes $\epsilon_A$ to distinguish the \gls{nullstring} over $A$, since
+    $\epsilon$ might be a \gls{letter} in $A$, e.g. Definition 1.1.3.
+    %% TODO: link def 1.1.3
+  \1 The set of all \glspl{string} over the \gls{alphabet} $A$ is denoted
+  $A^*$.
+  \2 With the operation of \gls{concatenation}, the set $A^*$ of \glspl{string}
+  over $A$ forms a \gls{monoid}, with \gls{identity element}
+  \glsentrysymbol{nullstring}.
+  \2 $A^*$ is the free monoid or \gls{semigroup} on the set of generators $A$.
+  \1 All \glspl{semigroup} considered in this book will be \glspl{monoid}, so
+  the words are used interchangeably.
+  \1 Given two \glspl{string} $\omega : \{1,...,n\} \to A$ and $\tau :
+  \{1,...,m\} \to A\}$, the \gls{concatenation} $\omega\tau$ of $\omega$ and
+  $\tau$ is defined to be the \gls{string} $\{1,...,m+n\} \to A$ given by
+  $(\omega\tau)(i) = \omega(i)$ if $1 \leq i \leq n$ and $(\omega\tau)(i) =
+  \tau(i-n)$ if $n + 1 \leq i \leq n + m$.
+\end{outline}
 
 \newpage
 \printglossaries
